--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav>
-  <a routerLink="/">Home </a> |
-  <a routerLink="/parties">Liste des Parties </a> |
-  <a routerLink="/details">Details</a> <!-- Nouveau lien pour la route "details" -->
+  <a routerLink="/home">Home</a> | <!-- Changé de "/" à "/home" -->
+  <a routerLink="/parties">Liste des Parties</a> |
+  <a routerLink="/details">Details</a>
 </nav>
 <router-outlet></router-outlet>
